--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,39 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing myEmail
         completions."
     </string>
+
+    <!-- Strings related to main activity -->
+
+    <string-array name="nav_drawer_items">
+        <item>Show</item>
+        <item>Tell</item>
+        <item>Home</item>
+        <item>Profile</item>
+        <item>Upload</item>
+        <item>Logout</item>
+        <item>Moderate</item>
+        <item>Administer</item>
+    </string-array>
+
+    <array name="nav_drawer_icons">
+        <item>@drawable/ic_photo_library_black_24dp</item>
+        <item>@drawable/ic_share_black_24dp</item>
+        <item>@drawable/ic_home_black_24dp</item>
+        <item>@drawable/ic_account_circle_black_24dp</item>
+        <item>@drawable/ic_add_a_photo_black_24dp</item>
+        <item>@drawable/ic_exit_to_app_black_24dp</item>
+        <item>@drawable/ic_assignment_black_24dp</item>
+        <item>@drawable/ic_build_black_24dp</item>
+
+    </array>
+
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
+
+    <!-- Content Description -->
+    <string name="desc_list_item_icon">Item Icon</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
