--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,8 +42,18 @@
         <item>@drawable/ic_logout</item>
         <item>@drawable/ic_moderate</item>
         <item>@drawable/ic_administer</item>
-
     </array>
+
+    <string-array name="gender">
+        <item>Male</item>
+        <item>Female</item>
+        <item>Other</item>
+    </string-array>
+
+    <string-array name="language">
+        <item>English</item>
+        <item>German</item>
+    </string-array>
 
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
